# Static-Energy-Estimation-Pass-CD-EL-

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  evaluation_results.md  report.html  script.txt  test.mir
.github/workflows/: build.yml
Results/: evaluation_results.md  results_report.txt
data/: energy_model.json
lib/: CMakeLists.txt  EnergyPass.cpp
scripts/: build.bat  build.sh  evaluate.py  run_tests.bat  run_tests.sh  visualize.py
test/: 01_integer.c  02_float.c  03_memory.c  04_nested_loops.c  05_mixed.c  06_fp_vs_int.c  07_memory_latency.c  08_false_prediction.c  hello.c
